<resources>
    <string name="app_name">Portal Daneshjoi</string>
    <string name="txt_p">پورتال دانشجویی</string>
    <string name="tnb_club">TNB Club</string>
    <string name="_1_1_0">1.1.0</string>
    <string name="tnb_logo">Tnb_logo</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">شماره دانشجویی خود را وارد کنید</string>
    <string name="prompt_password">رمز عبور خود را وارد کنید</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="shomare_daneshjooii">شماره دانشجویی</string>
    <string name="pass">رمز عبور</string>
    <string name="log_in">ورود به سامانه</string>
    <string name="content">دانشگاه آزاد اسلامی واحد تهران شمال</string>
    <string name="portal_amozeshi">پورتال آموزشی</string>
    <string name="omormali">امور مالی</string>
    <string name="amozeshi">امور آموزشی</string>
    <string name="darkhast">درخواست‌های دانشجویی</string>
    <string name="vahed">انتخاب واحد</string>
    <string name="my_image">my image</string>
    <string name="user">محمدامین خادمی</string>
    <string name="_950431277">950431277</string>
    <string name="person_info">اطلاعات شخصی</string>
    <string name="email">پیام‌ها</string>
    <string name="parvande">پرونده دیجیتال</string>
    <string name="subheader">subheader</string>
    <string name="map">نقشه</string>
    <string name="phone">ثبت موبایل</string>
    <string name="exit">خروج</string>
    <string name="close_navigation">Close Navigation Drawer</string>
    <string name="open_navigation">Open Navigation Drawer</string>
    <string name="vaziate_tahsili">خلاصه وضعیت تحصیلی</string>
    <string name="change_pass">تغییر رمز</string>
    <string name="my_photo">my photo</string>
    <string name="pardakht_item">پرداخت الکترونیک</string>
    <string name="vaziate_mali">وضعیت مالی</string>
    <string name="mohasebe_shahrie">محاسبه شهریه</string>
    <string name="failed_payent">پرداخت‌های ناموفق</string>
    <string name="barname_haftegi">برنامه هفتگی</string>
    <string name="barname_kelasi">برنامه کلاسی</string>
    <string name="eteraz">اعتراض نمرات</string>
    <string name="karname">کارنامه</string>
    <string name="list_doros">لیست دروس</string>
    <string name="zaman_bandi">زمان‌بندی ثبت نام</string>
    <string name="kart">کارت امتحان</string>
    <string name="tarh">طرح درس</string>
    <string name="jozve">دریافت جزوه</string>
    <string name="khabgah">درخواست خوابگاه</string>
    <string name="parking">پارکینگ</string>
    <string name="ghaza">رزرو غذا</string>
    <string name="vam">درخواست وام</string>
    <string name="eshteghal">گواهی اشتغال</string>
    <string name="morakhasi">مرخصی تحصیلی</string>
    <string name="pardakht_image">pardakht image</string>
    <string name="vaziatemali_image">vaziatemali_image</string>
    <string name="formol_image">formol_image</string>
    <string name="pardakhtnamovafagh_image">pardakhtnamovafagh_image</string>
    <string name="barnamehaftegi_image">barnamehaftegi_image</string>
    <string name="barnamekelasi_image">barnamekelasi_image</string>
    <string name="eteraz_image">eteraz_image</string>
    <string name="karname_image">karname_image</string>
    <string name="listdoros_image">listdoros_image</string>
    <string name="zamanbandi_image">zamanbandi_image</string>
    <string name="kart_image">kart_image</string>
    <string name="bank_names">سامان، ملی، ملت، صادرات، تجارت، سپه، رفاه، کشاورزی، پارسیان، اقتصاد نوین، پاسارگاد، صنعت و معدن، مسکن، توسعه صادرات، پست بانک، کارآفرین، سرمایه، سینا</string>
    <string name="shetab_content">برای پرداخت‌های الکترونیکی خود می‌توانید از بانک‌های عضو شبکه شتاب استفاده کنید : </string>
    <string name="mablagh">مبلغ پرداختی:</string>
    <string name="hint">ريال</string>
    <string name="tozih">دانشجوی گرامی برای پرداخت، بعد از وارد کردن مبلغ موردنظر، درگاه بانک ملی را لمس نمایید!</string>
    <string name="test_spinner">نیمسال اول 98-99</string>
    <string name="takhalof">تخلف و تقلب</string>
    <string name="aiin_name">آیین‌نامه انضباطی دانشجویی مخصوص امتحانات</string>
    <string name="takhalof_taghalob">نقض مقررات جلسه امتحان و هر آن‌چه که موجب افزایش دانسته‌های دانشجو شود که اعم مصادیق عبارتند از : همراه داشتن کتاب، جزوه، موبایل و... مگر با مجوز استاد
    نوشتن اسم غیرواقعی روی برگه امتحانی .
    کمک به دیگران برای پاسخگویی به سوالات.
    خارج نمودن پاسخنامه از جلسه امتحان  یا پاره‌کردن آن .
    فرستادن شخص دیگری به‌جای خود به جلسه امتحان.
    شرکت به‌جای دیگری در امتحان.</string>
    <string name="tanbihat">تنبیهات</string>
    <string name="checkbox_kart">اینجانب محمدامین خادمی مطالب فوق را مطالعه کردم</string>
    <string name="btn_text">مشاهده کارت ورود به جلسه</string>
    <string name="bestankar">بستانکار (ريال)</string>
    <string name="bedehkar">بدهکار (ريال)</string>
    <string name="shomarehesabjari">شماره حساب جاری</string>
    <string name="tarikhfish">تاریخ فیش</string>
    <string name="shomarefish">شماره فیش</string>
    <string name="itemmali">آیتم مالی</string>
    <string name="jamekol">جمع کل (ریال):</string>
    <string name="vaziatekol">وضعیت کل (ریال):</string>
    <string name="showvaziatekol">۱۲۰۰۰ بستانکار</string>
    <string name="variz_time">ساعت واریز</string>
    <string name="variz_date">تاریخ واریز</string>
    <string name="varizi_mablagh">مبلغ واریزی</string>
    <string name="shomaresefaresh">شماره سفارش</string>
    <string name="shenase">شناسه</string>
    <string name="test01">65215485</string>
    <string name="test02">54875125</string>
    <string name="feeli_mobile">شماره موبایل فعلی</string>
    <string name="shomarefeli">شماره موبایل فعلی</string>
    <string name="shomarejadid">شماره موبایل جدید</string>
    <string name="mobilesubmit">ثبت موبایل</string>
    <string name="nowpass">رمز عبور فعلی</string>
    <string name="newpass">رمز عبور جدید</string>
    <string name="acceptnewpass">تایید رمز عبور جدید</string>
    <string name="jahateeraee">جهت ارائه به</string>
    <string name="elatedarkhast">علت درخواست</string>
    <string name="submitreq">ثبت درخواست</string>
    <string name="modalekol">معدل کل :</string>
    <string name="kolvahedgh">کل واحد قبولی :</string>
    <string name="vahedentekhab">کل واحد انتخابی :</string>
    <string name="moadeleghabl">معدل ترم قبل :</string>
    <string name="vaziatetermghabl">وضعیت ترم قبل :</string>
    <string name="saghfevahed">سقف واحد :</string>
    <string name="mashrotterms">ترم‌های مشروط :</string>
    <string name="error_vahed">error_vahed</string>
    <string name="bedehkar0">شما مبلغ ۱۰۰۰۰ تومان بدهکار هستید!</string>
    <string name="zaman0">لطفا در زمان تعیین شده مراجعه فرمایید!</string>
    <string name="pardakhtshahrie">پرداخت شهریه</string>
    <string name="faalast">سامانه انتخاب واحد هم‌اکنون برای شما فعال می‌باشد!</string>
    <string name="enterentekhab">ورود به انتخاب واحد</string>
    <string name="view_moshakhase">مشخصۀ درس مورد نظر را وارد کنید!</string>
    <string name="hint_moshakhase">مشخصۀ درس</string>
    <string name="ss">ثبت درس</string>
    <string name="vahed0">واحد</string>
    <string name="lessonname">نام درس</string>
    <string name="techer">استاد</string>
    <string name="examdate">تاریخ امتحان</string>
    <string name="classtime">ساعت کلاس</string>
    <string name="zarfiat">ظرفیت</string>
    <string name="moshakhase">مشخصه</string>
    <string name="vahed_nazari">و.نظری</string>
    <string name="vahed_amali">و.عملی</string>
    <string name="choos">گزینه مورد نظر را انتخاب کنید!</string>
    <string name="controlmoadel">کنترل معدل</string>
    <string name="time">ساعت</string>
    <string name="sallvorod">سال ورود</string>
    <string name="enddate">تاریخ پایان</string>
    <string name="startdate">تاریخ شروع</string>
    <string name="score">امتیاز</string>
    <string name="amali">ع</string>
    <string name="nazari">ن</string>
    <string name="vaziat">وضعیت</string>
    <string name="nomre">نمره</string>
    <string name="lessoncode">کد درس</string>
    <string name="passwordchanging">تغییر رمز عبور</string>
</resources>
