<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activities"
    tools:context=".Activity.Omor_mali_activities.Pardakht_electronic">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar_pardakht_e_id"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
        android:layout_centerInParent="true"
        android:background="@drawable/back_1"
        android:layout_margin="11dp"
        android:orientation="vertical"
        android:layout_below="@id/toolbar_pardakht_e_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/black_color"
            android:padding="8dp"
            android:id="@+id/txt_content_id"
            android:text="@string/shetab_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="8dp"
            android:textSize="20sp"
            android:textColor="@color/black_color"
            android:id="@+id/txt_bank_name_id"
            android:text="@string/bank_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="26sp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/black_color"
            android:text="@string/mablagh"
            android:id="@+id/txt_mablagh_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/hint"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:id="@+id/mablaghe_pardakhti_id"
            android:inputType="number"
            android:textColor="@color/white_color"
            android:textAlignment="center"
            android:background="@drawable/background_edit_text"
            android:layout_height="45dp"
            android:layout_margin="20dp"/>

        <ImageButton
            android:id="@+id/btn_dargah_pardakht_id"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_bmi" />

        <TextView
            android:id="@+id/txt_tozih_id"
            android:padding="8dp"
            android:textColor="@color/black_color"
            android:textSize="18sp"
            android:text="@string/tozih"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>