<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:weightSum="1">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.33">
                    <ImageButton
                        android:contentDescription="@string/pardakht_image"
                        android:id="@+id/btn_pardakht_id"
                        android:layout_margin="15dp"
                        android:layout_width="wrap_content"
                        android:background="@drawable/background_btns"
                        android:padding="15dp"
                        android:src="@drawable/ic_pardakht_e"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txt_pardakht_id"
                        android:textSize="16sp"
                        android:textColor="@color/black_color"
                        android:textAlignment="center"
                        android:text="@string/pardakht_item"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.33">
                    <ImageButton
                        android:contentDescription="@string/vaziatemali_image"
                        android:id="@+id/btn_vaziat_id"
                        android:layout_margin="15dp"
                        android:layout_width="wrap_content"
                        android:background="@drawable/background_btns"
                        android:padding="15dp"
                        android:src="@drawable/ic_vazeiate_mali"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txt_vaziat_id"
                        android:textSize="16sp"
                        android:textColor="@color/black_color"
                        android:textAlignment="center"
                        android:text="@string/vaziate_mali"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="23dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_formol_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/background_btns"
                        android:contentDescription="@string/formol_image"
                        android:padding="15dp"
                        android:src="@drawable/ic_mohasebeh_shahrieh" />

                    <TextView
                        android:id="@+id/txt_formol_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/mohasebe_shahrie"
                        android:textAlignment="center"
                        android:textColor="@color/black_color"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_pardakht_namovafagh_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/background_btns"
                    android:contentDescription="@string/pardakhtnamovafagh_image"
                    android:padding="15dp"
                    android:src="@drawable/ic_payment_error" />

                <TextView
                    android:id="@+id/txt_pardakht_namovafagh_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/failed_payent"
                    android:textAlignment="center"
                    android:textColor="@color/black_color"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>