<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Splash"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/img_logo_tnb_id"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/images"
        android:contentDescription="@string/tnb_logo"/>

    <TextView
        android:id="@+id/txt_welcome_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo_tnb_id"
        android:layout_marginTop="48dp"
        android:text="@string/txt_p"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="@dimen/txt_welcome_size28sp" />

    <TextView
        android:id="@+id/txt_version_id"
        android:layout_width="43dp"
        android:layout_height="20dp"
        android:layout_below="@id/txt_welcome_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/_1_0_0" />

    <TextView
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:id="@+id/txt_bottom_id"
        android:text="@string/tnb_club"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</RelativeLayout>