<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_activities"
    android:layout_height="match_parent"
    tools:context=".Activity.Omor_amozeshi_activities.KartEmtehan">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_kart_id"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <ScrollView
        android:layout_below="@id/toolbar_kart_id"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_below="@id/toolbar_kart_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="@drawable/back_1">

            <TextView
                android:id="@+id/txt_kart01_id"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/aiin_name"
                android:textSize="18sp"
                android:textColor="@color/green_color_Dark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_kart02_id"
                android:layout_below="@id/txt_kart01_id"
                android:text="@string/takhalof"
                android:textColor="@color/red_color"
                android:textSize="20sp"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_below="@id/txt_kart02_id"
                android:text="@string/takhalof_taghalob"
                android:layout_marginLeft="8dp"
                android:id="@+id/txt_kart03_id"
                android:layout_marginRight="14dp"
                android:textSize="18sp"
                android:layout_marginBottom="6dp"
                android:textColor="@color/black_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_kart04_id"
                android:text="@string/tanbihat"
                android:textColor="@color/red_color"
                android:textSize="20sp"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="8dp"
                android:layout_below="@id/txt_kart03_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_below="@id/txt_kart04_id"
                android:id="@+id/txt_kart05_id"
                android:text="احضار و اخطار شفاهی \n تذکر کتبی بدون درج در پرونده \n توبیخ کتبی و درج در پرونده دانشجو \n حذف درس مربوط به تخلف \n دادن نمره 0.25 در درس مربوط به تقلب \n ممنوعیت انتخاب بیش از 14 واحد در ترم آینده \n منع موقت از تحصیل به مدت یک الی دو نیمسال بدون احتساب سنوات \n منع موقت از تحصیل به مدت یک الی دو نیمسال با احتساب سنوات \n تغییر محل تحصیل دانشجو در واحد های منطقه"
                android:layout_width="match_parent"
                android:textColor="@color/black_color"
                android:layout_marginRight="14dp"
                android:layout_marginLeft="8dp"
                android:textSize="18sp"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_below="@id/txt_kart05_id"
                android:text="@string/checkbox_kart"
                android:layout_width="match_parent"
                android:textColor="@color/red_color"
                android:textSize="16sp"
                android:id="@+id/checkbox_kart_id"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"
                />

            <Button
                android:layout_below="@id/checkbox_kart_id"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_text"
                android:textColor="@color/withe_color"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:id="@+id/btn_showkart_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>